--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="北京网站建设有限公司,北京网站建设有限公司">
     <meta name="description" content="北京网站建设有限公司-北京网站建设有限公司">
 
-    <link href="./public/css/animate.css" rel="stylesheet" type="text/css" />
+    <link href="./css/animate.css" rel="stylesheet" type="text/css" />
     <link href="./css/site_impt_r.css" rel="stylesheet" type="text/css" />
     <link href="./css/page_impt_Home.css" rel="stylesheet" type="text/css" />
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
@@ -164,7 +164,7 @@
         window.noredirectCookieName = "_noredirect";
         var visittrack_siteId = "site_1712110281";
         var visittrack_url = "http://makeyun1.gather.shushang-z.cn" + "/trace.do";
-        var gatherScripts = "http://makeyun1.gather.shushang-z.cn" + "/scripts/visittrack.js";
+        // var gatherScripts = "http://makeyun1.gather.shushang-z.cn" + "/scripts/visittrack.js";
         window.globalObj = {};
         window.globalObj.isOpenSSL = false; //请求协议http:// 还是 https://
         try {
@@ -183,7 +183,7 @@
             console.log(e);
         }
     </script>
-    <script type="text/javascript" src="./public/wgt/coreLibs/interwords.js"></script>
+    <script type="text/javascript" src="js/interwords.js"></script>
     <meta http-equiv="Cache-Control" content="no-transform" />
     <meta http-equiv="Cache-Control" content="no-siteapp" />
     <meta name="applicable-device" content="pc,mobile" />
@@ -191,11 +191,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <!--[if lt IE 9]> 
-<script src="https://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-<script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.js"></script>
-<![endif]-->
-    <link type="text/css" href="./upload/css/test.css" rel="stylesheet">
-    </link>
+    <script src="https://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.js"></script>
+    <![endif]-->
+    <link type="text/css" href="css/test.css" rel="stylesheet" />
 </head>
 
 <body data-pageid="bedfaee6-375f-4675-9501-4ed3854842ce" data-layout="flow">
@@ -223,7 +222,7 @@
                                         </div>
                                         <div id="content_box-1560758099816-1" class="e_box e_box-000 d_gridCell_1 p_gridCell">
                                             <div id="c_portalResnav_main-15607580998711447" class="c_portalResnav_main-01001">
-                                                <link type="text/css" href="//dfs.yun300.cn/group1/M00/17/39/rBQBHF0HsZ6EXYNGAAAAAEhPhfI511.css" rel="stylesheet">
+<!--                                                <link type="text/css" href="//dfs.yun300.cn/group1/M00/17/39/rBQBHF0HsZ6EXYNGAAAAAEhPhfI511.css" rel="stylesheet">-->
                                                 <!-- 导航 -->
                                                 <header class="header">
                                                     <div class="container clearfix">
@@ -233,16 +232,16 @@
                                                                     <a class="navNameLink" href="./index.html">首页</a>
                                                                 </li>
                                                                 <li class="dropdown">
-                                                                    <a class="navNameLink" href="./pages/intro/index.html">公司简介</a>
+                                                                    <a class="navNameLink" href="./intro.html">公司简介</a>
 
                                                                 </li>
                                                                 <li class="dropdown">
-                                                                    <a class="navNameLink" href="./pages/product/index.html">设计案例</a>
+                                                                    <a class="navNameLink" href="./product.html">设计案例</a>
 
                                                                 </li>
 
                                                                 <li class="dropdown">
-                                                                    <a class="navNameLink" href="./pages/contact/index.html">联系我们</a>
+                                                                    <a class="navNameLink" href="./concact.html">联系我们</a>
 
                                                                 </li>
                                                             </ul>
@@ -267,16 +266,16 @@
 
                                                         </li>
                                                         <li class="dropdown">
-                                                            <a class="navNameLink" href="./pages/intro/index.html">公司简介</a>
+                                                            <a class="navNameLink" href="./intro.html">公司简介</a>
 
                                                         </li>
                                                         <li class="dropdown">
-                                                            <a class="navNameLink" href="./pages/product/index.html">设计案例</a>
+                                                            <a class="navNameLink" href="./product.html">设计案例</a>
 
                                                         </li>
 
                                                         <li class="dropdown">
-                                                            <a class="navNameLink" href="./pages/contact/index.html">联系我们</a>
+                                                            <a class="navNameLink" href="./concact.html">联系我们</a>
 
                                                         </li>
 
@@ -1042,9 +1041,9 @@
                                                         <div class="e_box p_Product" dataId="3" data-dismoveable data-foreachitem>
                                                             <div class="e_box border_default p_ProductInner">
                                                                 <!--图片区 -->
-                                                                <div class="e_box p_images p_imagesPc" data-url="/product/3.html" data-target="_parent" imgData='{&#034;tagList&#034;:[],&#034;navs&#034;:[{&#034;path&#034;:&#034;/repository/image/1whjsLpnRTaSpIKsCXqUcg.jpg_{i}xaf.jpg&#034;,&#034;smallPath&#034;:&#034;/repository/image/1whjsLpnRTaSpIKsCXqUcg.jpg_{i}xaf.jpg&#034;,&#034;bigH&#034;:1280,&#034;bigW&#034;:1920,&#034;srcBigPic&#034;:&#034;repository/image/1whjsLpnRTaSpIKsCXqUcg.jpg&#034;,&#034;smallH&#034;:30,&#034;smallW&#034;:38,&#034;title&#034;:&#034;写字楼&#034;}]}'></div>
-                                                                <div class="e_box p_images p_imagesMo" imgData='{&#034;tagList&#034;:[],&#034;navs&#034;:[{&#034;path&#034;:&#034;/repository/image/1whjsLpnRTaSpIKsCXqUcg.jpg_{i}xaf.jpg&#034;,&#034;smallPath&#034;:&#034;/repository/image/1whjsLpnRTaSpIKsCXqUcg.jpg_{i}xaf.jpg&#034;,&#034;bigH&#034;:1280,&#034;bigW&#034;:1920,&#034;srcBigPic&#034;:&#034;repository/image/1whjsLpnRTaSpIKsCXqUcg.jpg&#034;,&#034;smallH&#034;:30,&#034;smallW&#034;:38,&#034;title&#034;:&#034;写字楼&#034;}]}'>
-                                                                    <div class="e_image p_image"> <img lazy-src="/repository/image/1whjsLpnRTaSpIKsCXqUcg.jpg" title='写字楼' class='js_thumb' alt='写字楼' />
+                                                                <div class="e_box p_images p_imagesPc" data-url="/product/3.html" data-target="_parent" ></div>
+                                                                <div class="e_box p_images p_imagesMo">
+                                                                    <div class="e_image p_image"> <img lazy-src="./img/office-building.jpg" title='写字楼' class='js_thumb' alt='写字楼' />
                                                                     </div>
                                                                 </div>
                                                                 <div class="e_box d_articles p_articles" data-ename="产品内容区">
@@ -1114,9 +1113,9 @@
                                                         <div class="e_box p_Product" dataId="2" data-dismoveable data-foreachitem>
                                                             <div class="e_box border_default p_ProductInner">
                                                                 <!--图片区 -->
-                                                                <div class="e_box p_images p_imagesPc" data-url="/product/2.html" data-target="_parent" imgData='{&#034;tagList&#034;:[],&#034;navs&#034;:[{&#034;path&#034;:&#034;/repository/image/zEaZOq-QQraXrirlquQJig.jpg_{i}xaf.jpg&#034;,&#034;smallPath&#034;:&#034;/repository/image/zEaZOq-QQraXrirlquQJig.jpg_{i}xaf.jpg&#034;,&#034;bigH&#034;:666,&#034;bigW&#034;:1000,&#034;srcBigPic&#034;:&#034;repository/image/zEaZOq-QQraXrirlquQJig.jpg&#034;,&#034;smallH&#034;:30,&#034;smallW&#034;:38,&#034;title&#034;:&#034;建筑&#034;}]}'></div>
-                                                                <div class="e_box p_images p_imagesMo" imgData='{&#034;tagList&#034;:[],&#034;navs&#034;:[{&#034;path&#034;:&#034;/repository/image/zEaZOq-QQraXrirlquQJig.jpg_{i}xaf.jpg&#034;,&#034;smallPath&#034;:&#034;/repository/image/zEaZOq-QQraXrirlquQJig.jpg_{i}xaf.jpg&#034;,&#034;bigH&#034;:666,&#034;bigW&#034;:1000,&#034;srcBigPic&#034;:&#034;repository/image/zEaZOq-QQraXrirlquQJig.jpg&#034;,&#034;smallH&#034;:30,&#034;smallW&#034;:38,&#034;title&#034;:&#034;建筑&#034;}]}'>
-                                                                    <div class="e_image p_image"> <img lazy-src="/repository/image/zEaZOq-QQraXrirlquQJig.jpg" title='建筑' class='js_thumb' alt='建筑' />
+                                                                <div class="e_box p_images p_imagesPc" data-url="/product/2.html" data-target="_parent"></div>
+                                                                <div class="e_box p_images p_imagesMo">
+                                                                    <div class="e_image p_image"> <img lazy-src="./img/building-1.jpg" title='建筑' class='js_thumb' alt='建筑' />
                                                                     </div>
                                                                 </div>
                                                                 <div class="e_box d_articles p_articles" data-ename="产品内容区">
@@ -1186,9 +1185,9 @@
                                                         <div class="e_box p_Product" dataId="1" data-dismoveable data-foreachitem>
                                                             <div class="e_box border_default p_ProductInner">
                                                                 <!--图片区 -->
-                                                                <div class="e_box p_images p_imagesPc" data-url="/product/1.html" data-target="_parent" imgData='{&#034;tagList&#034;:[],&#034;navs&#034;:[{&#034;path&#034;:&#034;/repository/image/F2bzBHTmSxSqWtpdHFJaBQ.jpg_{i}xaf.jpg&#034;,&#034;smallPath&#034;:&#034;/repository/image/F2bzBHTmSxSqWtpdHFJaBQ.jpg_{i}xaf.jpg&#034;,&#034;bigH&#034;:666,&#034;bigW&#034;:1000,&#034;srcBigPic&#034;:&#034;repository/image/F2bzBHTmSxSqWtpdHFJaBQ.jpg&#034;,&#034;smallH&#034;:30,&#034;smallW&#034;:38,&#034;title&#034;:&#034;建筑&#034;}]}'></div>
-                                                                <div class="e_box p_images p_imagesMo" imgData='{&#034;tagList&#034;:[],&#034;navs&#034;:[{&#034;path&#034;:&#034;/repository/image/F2bzBHTmSxSqWtpdHFJaBQ.jpg_{i}xaf.jpg&#034;,&#034;smallPath&#034;:&#034;/repository/image/F2bzBHTmSxSqWtpdHFJaBQ.jpg_{i}xaf.jpg&#034;,&#034;bigH&#034;:666,&#034;bigW&#034;:1000,&#034;srcBigPic&#034;:&#034;repository/image/F2bzBHTmSxSqWtpdHFJaBQ.jpg&#034;,&#034;smallH&#034;:30,&#034;smallW&#034;:38,&#034;title&#034;:&#034;建筑&#034;}]}'>
-                                                                    <div class="e_image p_image"> <img lazy-src="/repository/image/F2bzBHTmSxSqWtpdHFJaBQ.jpg" title='建筑' class='js_thumb' alt='建筑' />
+                                                                <div class="e_box p_images p_imagesPc" data-url="/product/1.html" data-target="_parent"></div>
+                                                                <div class="e_box p_images p_imagesMo" >
+                                                                    <div class="e_image p_image"> <img lazy-src="./img/building-1.jpg" title='建筑' class='js_thumb' alt='建筑' />
                                                                     </div>
                                                                 </div>
                                                                 <div class="e_box d_articles p_articles" data-ename="产品内容区">
