--- a/product.html
+++ b/product.html
@@ -8,13 +8,13 @@
     <meta name="keywords" content="北京网站建设有限公司">
     <meta name="description" content="设计案例-北京网站建设有限公司">
 
-    <link href="../../public/css/animate.css" rel="stylesheet" type="text/css"/>
-    <link href="../../css/site_impt_r.css" rel="stylesheet" type="text/css"/>
-    <link href="../../css/ftmpl_impt_r.css" rel="stylesheet" type="text/css"/>
+    <link href="css/animate.css" rel="stylesheet" type="text/css"/>
+    <link href="css/site_impt_r.css" rel="stylesheet" type="text/css"/>
+    <link href="css/ftmpl_impt_r.css" rel="stylesheet" type="text/css"/>
 
-    <link href="../../css/page_impt_case.css" rel="stylesheet" type="text/css"/>
-    <link rel="shortcut icon" href="../../img/favicon.ico" type="image/x-icon"/>
-    <link href="../../css/footer_contact.css" rel="stylesheet" type="text/css"/>
+    <link href="css/page_impt_case.css" rel="stylesheet" type="text/css"/>
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
+    <link href="css/footer_contact.css" rel="stylesheet" type="text/css"/>
 
     <meta name='viewport' content='width=1440'/>
     <meta http-equiv="Cache-Control" content="no-transform"/>
@@ -166,7 +166,7 @@
         window.noredirectCookieName = "_noredirect";
         var visittrack_siteId = "site_1712110281";
         var visittrack_url = "http://makeyun1.gather.shushang-z.cn" + "/trace.do";
-        var gatherScripts = "http://makeyun1.gather.shushang-z.cn" + "/scripts/visittrack.js";
+        // var gatherScripts = "http://makeyun1.gather.shushang-z.cn" + "/scripts/visittrack.js";
         window.globalObj = {};
         window.globalObj.isOpenSSL = false; //请求协议http:// 还是 https://
         try {
@@ -185,7 +185,7 @@
             console.log(e);
         }
     </script>
-    <script type="text/javascript" src="../../public/wgt/coreLibs/interwords.js"></script>
+    <script type="text/javascript" src="js/interwords.js"></script>
     <meta http-equiv="Cache-Control" content="no-transform"/>
     <meta http-equiv="Cache-Control" content="no-siteapp"/>
     <meta name="applicable-device" content="pc,mobile"/>
@@ -196,8 +196,7 @@
     <script src="https://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.js"></script>
     <![endif]-->
-    <link type="text/css" href="../../upload/css/test.css?t=1563181297981" rel="stylesheet">
-    </link>
+    <link type="text/css" href="css/test.css?t=1563181297981" rel="stylesheet" />
 </head>
 
 <body data-pageid="e7537503-449f-4cdb-aa6a-a9acb3c7447e" data-layout="flow"
@@ -211,7 +210,7 @@
                         <div class="w_img animated  ">
                             <div class="e_box e_box-000 p_box">
                                 <a href="/" class="e_link e_link-000 p_link001" target="_self">
-                                    <div class="e_image e_DImage-001 p_dimage"><img src="../../img/logoa1.png"
+                                    <div class="e_image e_DImage-001 p_dimage"><img src="img/logoa1.png"
                                                                                     alt="logo" title="logo" width="100%"
                                                                                     height="100%"/></div>
                                 </a>
@@ -221,28 +220,26 @@
                 </div>
                 <div id="content_box-1555029541908-1" class="e_box e_box-000 d_gridCell_1 p_gridCell">
                     <div id="c_portalResnav_main-15609985272487585" class="c_portalResnav_main-01001001">
-                        <link type="text/css" href="//dfs.yun300.cn/group1/M00/17/39/rBQBHF0HsZ6EXYNGAAAAAEhPhfI511.css"
-                              rel="stylesheet">
                         <!-- 导航 -->
                         <header class="header">
                             <div class="container clearfix">
                                 <div class="fr nav">
                                     <ul class="navbar_nav" data-in="fadeInDown" data-out="fadeOutUp">
                                         <li class="dropdown">
-                                            <a class="navNameLink" href="../../index.html">首页</a>
+                                            <a class="navNameLink" href="./index.html">首页</a>
 
                                         </li>
                                         <li class="dropdown">
-                                            <a class="navNameLink" href="../intro/index.html">公司简介</a>
+                                            <a class="navNameLink" href="./intro.html">公司简介</a>
 
                                         </li>
                                         <li class="dropdown">
-                                            <a class="navNameLink" href="./index.html">设计案例</a>
+                                            <a class="navNameLink" href="./product.html">设计案例</a>
 
                                         </li>
 
                                         <li class="dropdown">
-                                            <a class="navNameLink" href="../contact/index.html">联系我们</a>
+                                            <a class="navNameLink" href="./concact.html">联系我们</a>
 
                                         </li>
                                     </ul>
@@ -263,20 +260,20 @@
 
 
                                 <li class="dropdown">
-                                    <a class="navNameLink" href="../../index.html">首页</a>
+                                    <a class="navNameLink" href="./index.html">首页</a>
 
                                 </li>
                                 <li class="dropdown">
-                                    <a class="navNameLink" href="../intro/index.html">公司简介</a>
+                                    <a class="navNameLink" href="./intro.html">公司简介</a>
 
                                 </li>
                                 <li class="dropdown">
-                                    <a class="navNameLink" href="./index.html">设计案例</a>
+                                    <a class="navNameLink" href="./product.html">设计案例</a>
 
                                 </li>
 
                                 <li class="dropdown">
-                                    <a class="navNameLink" href="../contact/index.html">联系我们</a>
+                                    <a class="navNameLink" href="./concact.html">联系我们</a>
 
                                 </li>
 
@@ -458,7 +455,7 @@
                                                                         "linkUrl": "/product/6/",
                                                                         "targetType": false,
                                                                         "leaf": false,
-                                                                        "img": "/img/img-none-big.png_{i}xaf.png",
+                                                                        // "img": "/img/img-none-big.png_{i}xaf.png",
                                                                         "open": true,
                                                                         "listPageid": "",
                                                                         "selected": false,
@@ -466,7 +463,7 @@
                                                                         "children": null,
                                                                         "content": "<div class='reset_style js-reset_style js-adapMobile '><p>\r\n\t写字楼</p>\r\n</div>",
                                                                         "summary": "写字楼",
-                                                                        "originalImgUrl": "/img/img-none-big.png",
+                                                                        // "originalImgUrl": "/img/img-none-big.png",
                                                                         "num": "0"
                                                                     }, {
                                                                         "id": 7,
@@ -475,7 +472,7 @@
                                                                         "linkUrl": "/product/7/",
                                                                         "targetType": false,
                                                                         "leaf": false,
-                                                                        "img": "/img/img-none-big.png_{i}xaf.png",
+                                                                        // "img": "/img/img-none-big.png_{i}xaf.png",
                                                                         "open": true,
                                                                         "listPageid": "",
                                                                         "selected": false,
@@ -483,7 +480,7 @@
                                                                         "children": null,
                                                                         "content": "<div class='reset_style js-reset_style js-adapMobile '><p>\r\n\t景点</p>\r\n</div>",
                                                                         "summary": "景点",
-                                                                        "originalImgUrl": "/img/img-none-big.png",
+                                                                        // "originalImgUrl": "/img/img-none-big.png",
                                                                         "num": "0"
                                                                     }],
                                                                     compId: "portalResProduct_category-15609996085529457"
@@ -521,12 +518,10 @@
                                                     <div class="e_box border_default p_ProductInner">
                                                         <!--图片区 -->
                                                         <div class="e_box p_images p_imagesPc"
-                                                             data-url="/product/3.html" data-target="_parent"
-                                                             imgData='{&#034;tagList&#034;:[],&#034;navs&#034;:[{&#034;path&#034;:&#034;/mobile-h5/repository/image/1whjsLpnRTaSpIKsCXqUcg.jpg_{i}xaf.jpg&#034;,&#034;smallPath&#034;:&#034;/mobile-h5/repository/image/1whjsLpnRTaSpIKsCXqUcg.jpg_{i}xaf.jpg&#034;,&#034;bigH&#034;:1280,&#034;bigW&#034;:1920,&#034;srcBigPic&#034;:&#034;repository/image/1whjsLpnRTaSpIKsCXqUcg.jpg&#034;,&#034;smallH&#034;:30,&#034;smallW&#034;:38,&#034;title&#034;:&#034;写字楼&#034;}]}'></div>
-                                                        <div class="e_box p_images p_imagesMo"
-                                                             imgData='{&#034;tagList&#034;:[],&#034;navs&#034;:[{&#034;path&#034;:&#034;/mobile-h5/repository/image/1whjsLpnRTaSpIKsCXqUcg.jpg_{i}xaf.jpg&#034;,&#034;smallPath&#034;:&#034;/mobile-h5/repository/image/1whjsLpnRTaSpIKsCXqUcg.jpg_{i}xaf.jpg&#034;,&#034;bigH&#034;:1280,&#034;bigW&#034;:1920,&#034;srcBigPic&#034;:&#034;repository/image/1whjsLpnRTaSpIKsCXqUcg.jpg&#034;,&#034;smallH&#034;:30,&#034;smallW&#034;:38,&#034;title&#034;:&#034;写字楼&#034;}]}'>
+                                                             data-url="/product/3.html" data-target="_parent"></div>
+                                                        <div class="e_box p_images p_imagesMo">
                                                             <div class="e_image p_image">
-                                                                <img lazy-src="/mobile-h5/repository/image/1whjsLpnRTaSpIKsCXqUcg.jpg"
+                                                                <img lazy-src="img/building-1.jpg"
                                                                      title='写字楼' class='js_thumb' alt='写字楼'/></div>
                                                         </div>
                                                         <div class="e_box d_articles p_articles" data-ename="产品内容区">
@@ -583,7 +578,7 @@
                                                                 <!-- 询价和产品比较浮动框需要的数据 -->
                                                                 <input type="hidden" class="js_compareFloatData" id="3"
                                                                        name="写字楼" templateId="1"
-                                                                       image="/mobile-h5/repository/image/1whjsLpnRTaSpIKsCXqUcg.jpg_135x135f.jpg">
+                                                                       image="img/building-1.jpg">
 
 
                                                             </div>
@@ -614,12 +609,10 @@
                                                     <div class="e_box border_default p_ProductInner">
                                                         <!--图片区 -->
                                                         <div class="e_box p_images p_imagesPc"
-                                                             data-url="/product/2.html" data-target="_parent"
-                                                             imgData='{&#034;tagList&#034;:[],&#034;navs&#034;:[{&#034;path&#034;:&#034;/mobile-h5/repository/image/zEaZOq-QQraXrirlquQJig.jpg_{i}xaf.jpg&#034;,&#034;smallPath&#034;:&#034;/mobile-h5/repository/image/zEaZOq-QQraXrirlquQJig.jpg_{i}xaf.jpg&#034;,&#034;bigH&#034;:666,&#034;bigW&#034;:1000,&#034;srcBigPic&#034;:&#034;repository/image/zEaZOq-QQraXrirlquQJig.jpg&#034;,&#034;smallH&#034;:30,&#034;smallW&#034;:38,&#034;title&#034;:&#034;建筑&#034;}]}'></div>
-                                                        <div class="e_box p_images p_imagesMo"
-                                                             imgData='{&#034;tagList&#034;:[],&#034;navs&#034;:[{&#034;path&#034;:&#034;/mobile-h5/repository/image/zEaZOq-QQraXrirlquQJig.jpg_{i}xaf.jpg&#034;,&#034;smallPath&#034;:&#034;/mobile-h5/repository/image/zEaZOq-QQraXrirlquQJig.jpg_{i}xaf.jpg&#034;,&#034;bigH&#034;:666,&#034;bigW&#034;:1000,&#034;srcBigPic&#034;:&#034;repository/image/zEaZOq-QQraXrirlquQJig.jpg&#034;,&#034;smallH&#034;:30,&#034;smallW&#034;:38,&#034;title&#034;:&#034;建筑&#034;}]}'>
+                                                             data-url="/product/2.html" data-target="_parent"></div>
+                                                        <div class="e_box p_images p_imagesMo">
                                                             <div class="e_image p_image">
-                                                                <img lazy-src="/mobile-h5/repository/image/zEaZOq-QQraXrirlquQJig.jpg"
+                                                                <img lazy-src="img/building-1.jpg"
                                                                      title='建筑' class='js_thumb' alt='建筑'/></div>
                                                         </div>
                                                         <div class="e_box d_articles p_articles" data-ename="产品内容区">
@@ -676,7 +669,7 @@
                                                                 <!-- 询价和产品比较浮动框需要的数据 -->
                                                                 <input type="hidden" class="js_compareFloatData" id="2"
                                                                        name="建筑" templateId="1"
-                                                                       image="/mobile-h5/repository/image/zEaZOq-QQraXrirlquQJig.jpg_135x135f.jpg">
+                                                                       image="img/building-1.jpg">
 
 
                                                             </div>
@@ -707,12 +700,10 @@
                                                     <div class="e_box border_default p_ProductInner">
                                                         <!--图片区 -->
                                                         <div class="e_box p_images p_imagesPc"
-                                                             data-url="/product/1.html" data-target="_parent"
-                                                             imgData='{&#034;tagList&#034;:[],&#034;navs&#034;:[{&#034;path&#034;:&#034;/mobile-h5/repository/image/F2bzBHTmSxSqWtpdHFJaBQ.jpg_{i}xaf.jpg&#034;,&#034;smallPath&#034;:&#034;/mobile-h5/repository/image/F2bzBHTmSxSqWtpdHFJaBQ.jpg_{i}xaf.jpg&#034;,&#034;bigH&#034;:666,&#034;bigW&#034;:1000,&#034;srcBigPic&#034;:&#034;repository/image/F2bzBHTmSxSqWtpdHFJaBQ.jpg&#034;,&#034;smallH&#034;:30,&#034;smallW&#034;:38,&#034;title&#034;:&#034;建筑&#034;}]}'></div>
-                                                        <div class="e_box p_images p_imagesMo"
-                                                             imgData='{&#034;tagList&#034;:[],&#034;navs&#034;:[{&#034;path&#034;:&#034;/mobile-h5/repository/image/F2bzBHTmSxSqWtpdHFJaBQ.jpg_{i}xaf.jpg&#034;,&#034;smallPath&#034;:&#034;/mobile-h5/repository/image/F2bzBHTmSxSqWtpdHFJaBQ.jpg_{i}xaf.jpg&#034;,&#034;bigH&#034;:666,&#034;bigW&#034;:1000,&#034;srcBigPic&#034;:&#034;repository/image/F2bzBHTmSxSqWtpdHFJaBQ.jpg&#034;,&#034;smallH&#034;:30,&#034;smallW&#034;:38,&#034;title&#034;:&#034;建筑&#034;}]}'>
+                                                             data-url="/product/1.html" data-target="_parent"></div>
+                                                        <div class="e_box p_images p_imagesMo">
                                                             <div class="e_image p_image">
-                                                                <img lazy-src="/mobile-h5/repository/image/F2bzBHTmSxSqWtpdHFJaBQ.jpg"
+                                                                <img lazy-src="img/office-building.jpg"
                                                                      title='建筑' class='js_thumb' alt='建筑'/></div>
                                                         </div>
                                                         <div class="e_box d_articles p_articles" data-ename="产品内容区">
@@ -769,7 +760,7 @@
                                                                 <!-- 询价和产品比较浮动框需要的数据 -->
                                                                 <input type="hidden" class="js_compareFloatData" id="1"
                                                                        name="建筑" templateId="1"
-                                                                       image="/mobile-h5/repository/image/F2bzBHTmSxSqWtpdHFJaBQ.jpg_135x135f.jpg">
+                                                                       image="img/office-builiding.jpg">
 
 
                                                             </div>
@@ -1088,7 +1079,7 @@
                                         <div class="w_img animated  ">
                                             <div class="e_box e_box-000 p_box">
                                                 <div class="e_image e_DImage-001 p_dimage"><img
-                                                        src="../../img/22201.jpg" alt="这是描述信息" title="这是描述信息"
+                                                        src="img/22201.jpg" alt="这是描述信息" title="这是描述信息"
                                                         width="100%" height="100%"/></div>
                                             </div>
                                         </div>
