--- a/concact.html
+++ b/concact.html
@@ -7,13 +7,13 @@
     <meta name="keywords" content="联系我们,北京网站建设有限公司">
     <meta name="description" content="联系我们-北京网站建设有限公司">
 
-    <link href="../../public/css/animate.css" rel="stylesheet" type="text/css"/>
-    <link href="../../css/site_impt_r.css" rel="stylesheet" type="text/css"/>
-    <link href="../../css/ftmpl_impt_r.css" rel="stylesheet" type="text/css"/>
+    <link href="css/animate.css" rel="stylesheet" type="text/css"/>
+    <link href="css/site_impt_r.css" rel="stylesheet" type="text/css"/>
+    <link href="css/ftmpl_impt_r.css" rel="stylesheet" type="text/css"/>
 
-    <link href="../../css/page_impt_about.css" rel="stylesheet" type="text/css"/>
-    <link rel="shortcut icon" href="../../img/favicon.ico" type="image/x-icon"/>
-    <link href="../../css/footer_contact.css" rel="stylesheet" type="text/css"/>
+    <link href="css/page_impt_about.css" rel="stylesheet" type="text/css"/>
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
+    <link href="css/footer_contact.css" rel="stylesheet" type="text/css"/>
 
     <meta name='viewport' content='width=1440'/>
     <meta http-equiv="Cache-Control" content="no-transform"/>
@@ -160,7 +160,7 @@
         window.noredirectCookieName = "_noredirect";
         var visittrack_siteId = "site_1712110281";
         var visittrack_url = "http://makeyun1.gather.shushang-z.cn" + "/trace.do";
-        var gatherScripts = "http://makeyun1.gather.shushang-z.cn" + "/scripts/visittrack.js";
+        // var gatherScripts = "http://makeyun1.gather.shushang-z.cn" + "/scripts/visittrack.js";
         window.globalObj = {};
         window.globalObj.isOpenSSL = false;//请求协议http:// 还是 https://
         try {
@@ -179,7 +179,7 @@
             console.log(e);
         }
     </script>
-    <script type="text/javascript" src="../../public/wgt/coreLibs/interwords.js"></script>
+    <script type="text/javascript" src="js/interwords.js"></script>
     <meta http-equiv="Cache-Control" content="no-transform"/>
     <meta http-equiv="Cache-Control" content="no-siteapp"/>
     <meta name="applicable-device" content="pc,mobile"/>
@@ -190,7 +190,7 @@
     <script src="https://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.js"></script>
     <![endif]-->
-    <link type="text/css" href="../../upload/css/test.css?t=1563180101498" rel="stylesheet">
+    <link type="text/css" href="css/test.css?t=1563180101498" rel="stylesheet">
     </link>
 </head>
 <body data-pageid="1ab998f7-5c7d-42b8-9f78-1059638a78b2" data-layout="flow"
@@ -204,7 +204,7 @@
                         <div class="w_img animated  ">
                             <div class="e_box e_box-000 p_box"><a href="/" class="e_link e_link-000 p_link001"
                                                                   target="_self">
-                                <div class="e_image e_DImage-001 p_dimage"><img src="../../img/logoa1.png" alt="logo"
+                                <div class="e_image e_DImage-001 p_dimage"><img src="img/logoa1.png" alt="logo"
                                                                                 title="logo" width="100%"
                                                                                 height="100%"/></div>
                             </a></div>
@@ -213,28 +213,26 @@
                 </div>
                 <div id="content_box-1555029541908-1" class="e_box e_box-000 d_gridCell_1 p_gridCell">
                     <div id="c_portalResnav_main-15609985272487585" class="c_portalResnav_main-01001001">
-                        <link type="text/css" href="//dfs.yun300.cn/group1/M00/17/39/rBQBHF0HsZ6EXYNGAAAAAEhPhfI511.css"
-                              rel="stylesheet">
                         <!-- 导航 -->
                         <header class="header">
                             <div class="container clearfix">
                                 <div class="fr nav">
                                     <ul class="navbar_nav" data-in="fadeInDown" data-out="fadeOutUp">
                                         <li class="dropdown">
-                                            <a class="navNameLink" href="../../index.html">首页</a>
+                                            <a class="navNameLink" href="./index.html">首页</a>
 
                                         </li>
                                         <li class="dropdown">
-                                            <a class="navNameLink" href="../intro/index.html">公司简介</a>
+                                            <a class="navNameLink" href="./intro.html">公司简介</a>
 
                                         </li>
                                         <li class="dropdown">
-                                            <a class="navNameLink" href="../product/index.html">设计案例</a>
+                                            <a class="navNameLink" href="./product.html">设计案例</a>
 
                                         </li>
 
                                         <li class="dropdown">
-                                            <a class="navNameLink" href="./index.html">联系我们</a>
+                                            <a class="navNameLink" href="./concact.html">联系我们</a>
 
                                         </li>
                                     </ul>
@@ -255,20 +253,20 @@
 
 
                                 <li class="dropdown">
-                                    <a class="navNameLink" href="../../index.html">首页</a>
+                                    <a class="navNameLink" href="./index.html">首页</a>
 
                                 </li>
                                 <li class="dropdown">
-                                    <a class="navNameLink" href="../intro/index.html">公司简介</a>
+                                    <a class="navNameLink" href="./intro.html">公司简介</a>
 
                                 </li>
                                 <li class="dropdown">
-                                    <a class="navNameLink" href="../product/index.html">设计案例</a>
+                                    <a class="navNameLink" href="./product.html">设计案例</a>
 
                                 </li>
 
                                 <li class="dropdown">
-                                    <a class="navNameLink" href="./index.html">联系我们</a>
+                                    <a class="navNameLink" href="./concact.html">联系我们</a>
 
                                 </li>
 
@@ -482,9 +480,8 @@
                                                         </div>
                                                         <div class="mapmo">
                                                             <img class="imageResponse js-onerror"
-                                                                 domain-src="/mobile-h5/repository/image/p33J7sicTjCDpQpdc16tvQ.jpg"
                                                                  id="17"
-                                                                 src="../../repository/image/p33J7sicTjCDpQpdc16tvQ.jpg">
+                                                                 src="img/map.jpg">
                                                         </div>
                                                     </div>
                                                 </div>
@@ -575,7 +572,7 @@
                                         <div class="w_img animated  ">
                                             <div class="e_box e_box-000 p_box">
                                                 <div class="e_image e_DImage-001 p_dimage"><img
-                                                        src="../../img/22201.jpg" alt="这是描述信息" title="这是描述信息"
+                                                        src="img/22201.jpg" alt="这是描述信息" title="这是描述信息"
                                                         width="100%" height="100%"/></div>
                                             </div>
                                         </div>
